--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -77,7 +77,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/game/maps/house
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1051,8 +1051,9 @@ LastDirectory=
 RecentsFiles=C:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/game/maps/house
-MRUItem1=/Game/StarterContent/Maps/Minimal_Default
+MRUItem0=/Game/game/maps/housemap
+MRUItem1=/Game/game/maps/house
+MRUItem2=/Game/StarterContent/Maps/Minimal_Default
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1072,7 +1073,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/game/maps
+ContentBrowserDrawer.SelectedPaths=/Game/game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1082,6 +1083,8 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter;
