--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1087,6 +1087,7 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/game/maps/house/uploads_files_57570_isla_ventana.uploads_files_57570_isla_ventana;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter;
 
 [ContentBrowserRecent]
@@ -1261,4 +1262,7 @@ ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+
+[MessageLog]
+LastLogListing=FBXImport
 
