--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1088,7 +1088,7 @@ MovieSceneCapture.TimeStamp=2022.08.03-09.39.39
 MovieSceneCapture.LastCompileMethod=Unknown
 
 [LandscapeEdit]
-BrushRadius=8192.000000
+BrushRadius=2156.818848
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
 WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
@@ -1387,6 +1387,32 @@ Landscape.HierarchicalLOD=True
 Landscape.Replication=True
 Landscape.Input=True
 Landscape.Actor=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Materials=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+AmbientSound.TransformCommon=True
+AmbientSound.Sound=True
+AmbientSound.Attenuation=True
+AmbientSound.Filter=True
+AmbientSound.Attachment=True
+AmbientSound.Randomization=True
+AmbientSound.Concurrency=True
+AmbientSound.Tags=True
+AmbientSound.Activation=True
+AmbientSound.Cooking=True
+AmbientSound.Rendering=True
+AmbientSound.Replication=True
+AmbientSound.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1468,4 +1494,15 @@ TakeRecorderProjectSettings=True
 TcpMessagingSettings=True
 UdpMessagingSettings=True
 WmfMediaSettings=True
+
+[MRU]
+MRUItem0=/Game/StarterContent/Maps/Minimal_Default
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[MessageLog]
+LastLogListing=MapCheck
 
