--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=160)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -100,6 +100,7 @@ LastExecutedLaunchName=DESKTOP-KK9TVK8
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=320,Y=160)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -1421,6 +1422,157 @@ NavMeshBoundsVolume.Cooking=True
 NavMeshBoundsVolume.Replication=True
 NavMeshBoundsVolume.BrushSettings=True
 NavMeshBoundsVolume.Actor=True
+AI_C.Default=True
+AI_C.Tick=True
+AI_C.Character=True
+AI_C.Camera=True
+AI_C.Pawn=True
+AI_C.Replication=True
+AI_C.Rendering=True
+AI_C.Collision=True
+AI_C.Actor=True
+AI_C.Input=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.MasterPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+SceneComponent.TransformCommon=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Variable=True
+SceneComponent.Cooking=True
+AI_Controller_C.Tick=True
+AI_Controller_C.AI=True
+AI_Controller_C.Controller=True
+AI_Controller_C.Replication=True
+AI_Controller_C.Actor=True
+AI_Controller_C.Input=True
+BehaviorTreeGraphNode_Root.AI=True
+BlackboardData.Parent=True
+BlackboardData.Key=True
+BTTask_BlueprintBase_New_C.Task=True
+BTTask_BlueprintBase_New_C.Description=True
+BTComposite_Selector.Composite=True
+BTComposite_Selector.Description=True
+BTComposite_Sequence.Composite=True
+BTComposite_Sequence.Description=True
+AI_MoveToPlayer_C.Task=True
+AI_MoveToPlayer_C.Description=True
+AI_Controller_C.ComponentTick=True
+AI_Controller_C.Tags=True
+AI_Controller_C.ComponentReplication=True
+AI_Controller_C.Activation=True
+AI_Controller_C.Variable=True
+AI_Controller_C.Cooking=True
+AI_C.TransformCommon=True
+AI_C.Animation=True
+AI_C.Mesh=True
+AI_C.Clothing=True
+AI_C.Physics=True
+AI_C.MasterPoseComponent=True
+AI_C.Lighting=True
+AI_C.ClothingSimulation=True
+AI_C.SkinWeights=True
+AI_C.Navigation=True
+AI_C.VirtualTexture=True
+AI_C.Tags=True
+AI_C.Activation=True
+AI_C.Cooking=True
+AI_C.Character Movement (General Settings)=True
+AI_C.Character Movement: Walking=True
+AI_C.Character Movement: Jumping / Falling=True
+AI_C.Character Movement (Networking)=True
+AI_C.Character Movement: Swimming=True
+AI_C.Character Movement: Flying=True
+AI_C.Character Movement: Custom Movement=True
+AI_C.Character Movement (Rotation Settings)=True
+AI_C.Character Movement: Physics Interaction=True
+AI_C.Character Movement=True
+AI_C.Character Movement: Avoidance=True
+AI_C.RootMotion=True
+AI_C.Character Movement: NavMesh Movement=True
+AI_C.NavMovement=True
+AI_C.Velocity=True
+AI_C.PlanarMovement=True
+AI_C.MovementComponent=True
+AI_C.Shape=True
+AI_C.Materials=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+RandomLocation_C.Task=True
+RandomLocation_C.Description=True
+BTTask_MoveTo.Node=True
+BTTask_MoveTo.Blackboard=True
+BTTask_MoveTo.Task=True
+BTTask_MoveTo.Description=True
+BTTask_Wait.Wait=True
+BTTask_Wait.Task=True
+BTTask_Wait.Description=True
+AIPerceptionComponent.Variable=True
+AIPerceptionComponent.Sockets=True
+AIPerceptionComponent.AI Perception=True
+AIPerceptionComponent.Tags=True
+AIPerceptionComponent.ComponentTick=True
+AIPerceptionComponent.ComponentReplication=True
+AIPerceptionComponent.Cooking=True
+AIPerceptionComponent.Events=True
+AIPerceptionStimuliSourceComponent.Variable=True
+AIPerceptionStimuliSourceComponent.Sockets=True
+AIPerceptionStimuliSourceComponent.AI Perception=True
+AIPerceptionStimuliSourceComponent.Tags=True
+AIPerceptionStimuliSourceComponent.ComponentTick=True
+AIPerceptionStimuliSourceComponent.ComponentReplication=True
+AIPerceptionStimuliSourceComponent.Cooking=True
+AIPerceptionStimuliSourceComponent.Events=True
+BTDecorator_Blackboard.FlowControl=True
+BTDecorator_Blackboard.Blackboard=True
+BTDecorator_Blackboard.Description=True
+NavModifierVolume.TransformCommon=True
+NavModifierVolume.Default=True
+NavModifierVolume.Collision=True
+NavModifierVolume.Navigation=True
+NavModifierVolume.Tags=True
+NavModifierVolume.Cooking=True
+NavModifierVolume.BrushSettings=True
+NavModifierVolume.Replication=True
+NavModifierVolume.Actor=True
+RandomLocation_C.Default=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1515,6 +1667,8 @@ OnlyBuildVisibility=False
 LastLogListing=MapCheck
 
 [PlacementMode]
+RecentlyPlaced=/Script/NavigationSystem.NavModifierVolume;/Engine/Transient.ActorFactoryBoxVolume_1
+RecentlyPlaced=/Game/Game/AI/AI.AI;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1524,4 +1678,61 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+BlackboardData="\"Object.Blackboard\" "
+DataAsset="\"Object.Blackboard\" "
+Object=
+AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
+ActorComponent=
+AIPerceptionStimuliSourceComponent="\"Object.AI Perception.RegisterAsSourceForSenses\" "
+NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+
+[ContentBrowserRecent]
+MRUItem0=/Game/Game/AI/Special/Tasks/RandomLocation
+MRUItem1=/Game/Game/AI/AI
+MRUItem2=/Game/Game/AI/AI_Controller
+MRUItem3=/Game/Game/AI/Special/BTTask_BlueprintBase_New
+MRUItem4=/Game/Game/AI/Special/AI_BT
+
+[AssetEditorToolkitTabLocation]
+/Game/Game/AI/AI.AI=0
+/Game/Game/AI/AI_Controller.AI_Controller=0
+/Game/Game/AI/Special/Tasks/AI_MoveToPlayer.AI_MoveToPlayer=0
+/Game/Game/AI/Special/Tasks/RandomLocation.RandomLocation=0
+/Game/Game/AI/Special/AI_BT.AI_BT=0
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
