--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -1,9 +1,7 @@
 [/Script/UnrealEd.UnrealEdOptions]
 UsingXGE=False
-<<<<<<< HEAD
-=======
+None=======
 bExpandCustomClassPickerClassList=True
->>>>>>> b34965d2fea429f9ff12cde340c9ab1b8d32bc29
 
 [/Script/OculusEditor.OculusEditorSettings]
 bEnableOculusBuildTelemetry=False
