--- a/gizlilikoyunu.uproject
+++ b/gizlilikoyunu.uproject
@@ -1,21 +1,12 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{61E093D6-4F48-3195-D7EA-38A0FE9F0A0D}",
+	"EngineAssociation": "4.27",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
 		{
 			"Name": "ModelingToolsEditorMode",
 			"Enabled": true
-		},
-		{
-			"Name": "Bridge",
-			"Enabled": true,
-			"SupportedTargetPlatforms": [
-				"Win64",
-				"Mac",
-				"Linux"
-			]
 		}
 	]
 }
