--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -132,7 +132,7 @@ CurrentPosGridSize=0
 CurrentScalingGridSize=6
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=Bridge
@@ -1089,7 +1089,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1128,8 +1128,9 @@ RecentlyPlaced=/Game/game/house/house1/uploads_files_2087347_BUNGALOW_CEILING.up
 
 [ContentBrowserRecent]
 MRUItem0=/Game/game/maps/housemap
-MRUItem1=/Game/game/maps/house
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem1=/Game/game/maps/_GENERATED/user/Path_C5656DE5
+MRUItem2=/Game/game/maps/house
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
 
 [DetailCategories]
 BP_ThirdPersonGameMode_C.Tick=True
@@ -1180,9 +1181,20 @@ StaticMeshActor.TextureStreaming=True
 StaticMeshActor.LOD=True
 StaticMeshActor.MaterialParameters=True
 StaticMeshActor.Mobile=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode=1
+/Game/game/maps/_GENERATED/user/Path_C5656DE5.Path_C5656DE5=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
