--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -132,7 +132,7 @@ CurrentPosGridSize=0
 CurrentScalingGridSize=6
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [PluginBrowser]
 InstalledPlugins=Bridge
@@ -140,7 +140,7 @@ InstalledPlugins=XRVisualization
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.800
-WindowSize=X=1286.400 Y=726.400
+WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
